2005-03-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/page-layout.scm (default-page-make-stencil): only add header
	if existing and not empty. Fixes spurious programming error.

	* lily/span-bar.cc (print): don't make rounded edges for spanbars.

2005-03-31  Erlend Aasland  <erlenda@gmail.com>

	* scm/output-tex.scm: implement {re,}setcolor
	* tex/lilyponddefs.tex: use color package

2005-03-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (local-WWW-post): Restore .htaccess and .html
	additions to website.

	* Documentation/user/lilypond.tely: Remove reference to ps.gz.

	* Documentation/user/macros.itexi: Fix @usermanref html links in
	split documents: use @inforef.

2005-03-30  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/programming-interface.itely: minor fix.

	* Documentation/user/advanced-notation.itely: added info to
	Metronome markings.

2005-03-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-lib.scm (make-stencil-boxer): Junk code duplication,
	use box-stencil.  Remove y-padding argument.
	(make-stencil-circler): New function.

	* buildscripts/lilypond-words.py (F): 
	* elisp/SConscript (a): 
	* elisp/GNUmakefile (LILYPOND_WORDS_DEPENDS):
	* vim/SConscript (a): 
	* vim/GNUmakefile (LILYPOND_WORDS_DEPENDS): Update.

	* lily/general-scheme.cc: Build fix.

	* scm/markup.scm:
	* input/regression/markup-scheme.ly: 
	* input/regression/markup-syntax.ly: Drop 'new-' from name.

	* scm/stencil.scm (make-circle-stencil): New function.

	* scm/define-markup-commands.scm (draw-circle): Use it.  New
	name (was cicle).  Update callers.
	(circle): New markup command, similar to box.

	* scm/stencil.scm (circle-stencil): New function.

2005-03-29  David Jedlinsky  <lilypond@ipnh.com>

	* configure.in: Detect libutf8/wchar.h variant.

	* stepmake/aclocal.m4: Modify shared size test.

2005-03-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* make/lilypond.fedora.spec.in (Group): remove texmf profile stuff.
