@@ -57,16 +57,18 @@
 		  "(lilypond-internals.info)")
   "
 
+@c NOTE: This is documentation-generate.scm, not macros.itexi
+
 @ifhtml
 @macro usermanref{NAME}
-@uref{../lilypond/\\NAME\\.html,\\NAME\\}
+@ref{\\NAME\\,,,lilypond}
 @cindex \\NAME\\
 @end macro
 @end ifhtml
 
 @ifinfo
 @macro usermanref{NAME}
-@ref{\\NAME\\,,,lilypond/lilypond}
+@inforef{\\NAME\\,,,lilypond}
 @cindex \\NAME\\
 @end macro
 @end ifinfo
@@ -79,7 +81,7 @@
 
 @ifhtml
 @macro glossaryref{NAME}
-@uref{../music-glossary/\\NAME\\.html,\\NAME\\}
+@ref{\\NAME\\,,,music-glossary}
 @cindex \\NAME\\
 @end macro
 @end ifhtml
