@@ -1,3 +1,8 @@
+2005-03-31  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* scm/documentation-generate.scm (string-append): Fix @usermanref,
+	@glossaryref.
+
 2005-03-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* scm/page-layout.scm (default-page-make-stencil): only add header
